prevent overflow of text

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ code {
   border: 2px solid white;
   border-radius: 50px;
   align-self: 'center';
+  overflow: hidden;
 }
 .inputButton {
   position: absolute;
